Assembler/Step1/asm_parser.output
Terminais não usados na gramática

    ENDFILE
    ERROR
    DOLAR


Gramática

    0 $accept: prog $end

    1 prog: prog stmt
    2     | stmt

    3 stmt: add_stmt
    4     | sub_stmt
    5     | or_stmt
    6     | and_stmt
    7     | not_stmt
    8     | xor_stmt
    9     | cmp_stmt
   10     | branch_stmt
   11     | move_stmt
   12     | jump_stmt
   13     | load_stmt
   14     | store_stmt
   15     | push_stmt
   16     | pop_stmt
   17     | reti_stmt
   18     | halt_stmt
   19     | nop_stmt
   20     | byte_stmt
   21     | word_stmt
   22     | alloc_stmt
   23     | org_stmt
   24     | equ_stmt
   25     | label

   26 add_stmt: ADD REG COMMA REG COMMA REG
   27         | ADD REG COMMA REG COMMA CARDINAL NUMBER

   28 sub_stmt: SUB REG COMMA REG COMMA REG
   29         | SUB REG COMMA REG COMMA CARDINAL NUMBER

   30 or_stmt: OR REG COMMA REG COMMA REG
   31        | OR REG COMMA REG COMMA CARDINAL NUMBER

   32 and_stmt: AND REG COMMA REG COMMA REG
   33         | AND REG COMMA REG COMMA CARDINAL NUMBER

   34 not_stmt: NOT REG COMMA REG
   35         | NOT REG COMMA CARDINAL NUMBER

   36 xor_stmt: XOR REG COMMA REG
   37         | XOR REG COMMA CARDINAL NUMBER

   38 cmp_stmt: CMP REG COMMA REG

   39 branch_stmt: BRANCH REG COMMA IDENTIFIER

   40 move_stmt: MOVE REG COMMA REG
   41          | MOVE REG COMMA CARDINAL NUMBER

   42 jump_stmt: JUMP REG COMMA CARDINAL NUMBER
   43          | JUMP_LINK REG COMMA REG COMMA CARDINAL NUMBER

   44 load_stmt: LOAD_DIRECT REG COMMA CARDINAL NUMBER
   45          | LOAD_IMMEDIATE REG COMMA CARDINAL NUMBER
   46          | LOAD_INDEXED REG COMMA REG COMMA CARDINAL NUMBER

   47 store_stmt: STORE_DIRECT REG COMMA CARDINAL NUMBER
   48           | STORE_INDEXED REG COMMA REG COMMA CARDINAL NUMBER

   49 push_stmt: PUSH REG

   50 pop_stmt: POP REG

   51 reti_stmt: RETI

   52 halt_stmt: HALT

   53 nop_stmt: NOP

   54 byte_stmt: BYTE NUMBER

   55 word_stmt: WORD NUMBER

   56 alloc_stmt: ALLOC IDENTIFIER NUMBER

   57 org_stmt: ORG NUMBER

   58 equ_stmt: IDENTIFIER EQU NUMBER

   59 label: IDENTIFIER COLON


Terminais, com regras onde aparecem

    $end (0) 0
    error (256)
    ADD (258) 26 27
    SUB (259) 28 29
    OR (260) 30 31
    AND (261) 32 33
    NOT (262) 34 35
    XOR (263) 36 37
    CMP (264) 38
    BRANCH (265) 39
    JUMP (266) 42
    JUMP_LINK (267) 43
    MOVE (268) 40 41
    LOAD_DIRECT (269) 44
    LOAD_IMMEDIATE (270) 45
    LOAD_INDEXED (271) 46
    STORE_DIRECT (272) 47
    STORE_INDEXED (273) 48
    PUSH (274) 49
    POP (275) 50
    RETI (276) 51
    HALT (277) 52
    NOP (278) 53
    NUMBER (279) 27 29 31 33 35 37 41 42 43 44 45 46 47 48 54 55 56 57 58
    REG (280) 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50
    IDENTIFIER (281) 39 56 58 59
    ENDFILE (282)
    ERROR (283)
    COMMA (284) 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48
    CARDINAL (285) 27 29 31 33 35 37 41 42 43 44 45 46 47 48
    COLON (286) 59
    DOLAR (287)
    BYTE (288) 54
    WORD (289) 55
    ALLOC (290) 56
    ORG (291) 57
    EQU (292) 58


Não terminais, com regras onde aparecem

    $accept (38)
        à esquerda: 0
    prog (39)
        à esquerda: 1 2
        à direita: 0 1
    stmt (40)
        à esquerda: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25
        à direita: 1 2
    add_stmt (41)
        à esquerda: 26 27
        à direita: 3
    sub_stmt (42)
        à esquerda: 28 29
        à direita: 4
    or_stmt (43)
        à esquerda: 30 31
        à direita: 5
    and_stmt (44)
        à esquerda: 32 33
        à direita: 6
    not_stmt (45)
        à esquerda: 34 35
        à direita: 7
    xor_stmt (46)
        à esquerda: 36 37
        à direita: 8
    cmp_stmt (47)
        à esquerda: 38
        à direita: 9
    branch_stmt (48)
        à esquerda: 39
        à direita: 10
    move_stmt (49)
        à esquerda: 40 41
        à direita: 11
    jump_stmt (50)
        à esquerda: 42 43
        à direita: 12
    load_stmt (51)
        à esquerda: 44 45 46
        à direita: 13
    store_stmt (52)
        à esquerda: 47 48
        à direita: 14
    push_stmt (53)
        à esquerda: 49
        à direita: 15
    pop_stmt (54)
        à esquerda: 50
        à direita: 16
    reti_stmt (55)
        à esquerda: 51
        à direita: 17
    halt_stmt (56)
        à esquerda: 52
        à direita: 18
    nop_stmt (57)
        à esquerda: 53
        à direita: 19
    byte_stmt (58)
        à esquerda: 54
        à direita: 20
    word_stmt (59)
        à esquerda: 55
        à direita: 21
    alloc_stmt (60)
        à esquerda: 56
        à direita: 22
    org_stmt (61)
        à esquerda: 57
        à direita: 23
    equ_stmt (62)
        à esquerda: 58
        à direita: 24
    label (63)
        à esquerda: 59
        à direita: 25


Estado 0

    0 $accept: • prog $end

    ADD             troca e vai para estado 1
    SUB             troca e vai para estado 2
    OR              troca e vai para estado 3
    AND             troca e vai para estado 4
    NOT             troca e vai para estado 5
    XOR             troca e vai para estado 6
    CMP             troca e vai para estado 7
    BRANCH          troca e vai para estado 8
    JUMP            troca e vai para estado 9
    JUMP_LINK       troca e vai para estado 10
    MOVE            troca e vai para estado 11
    LOAD_DIRECT     troca e vai para estado 12
    LOAD_IMMEDIATE  troca e vai para estado 13
    LOAD_INDEXED    troca e vai para estado 14
    STORE_DIRECT    troca e vai para estado 15
    STORE_INDEXED   troca e vai para estado 16
    PUSH            troca e vai para estado 17
    POP             troca e vai para estado 18
    RETI            troca e vai para estado 19
    HALT            troca e vai para estado 20
    NOP             troca e vai para estado 21
    IDENTIFIER      troca e vai para estado 22
    BYTE            troca e vai para estado 23
    WORD            troca e vai para estado 24
    ALLOC           troca e vai para estado 25
    ORG             troca e vai para estado 26

    prog         vai para estado 27
    stmt         vai para estado 28
    add_stmt     vai para estado 29
    sub_stmt     vai para estado 30
    or_stmt      vai para estado 31
    and_stmt     vai para estado 32
    not_stmt     vai para estado 33
    xor_stmt     vai para estado 34
    cmp_stmt     vai para estado 35
    branch_stmt  vai para estado 36
    move_stmt    vai para estado 37
    jump_stmt    vai para estado 38
    load_stmt    vai para estado 39
    store_stmt   vai para estado 40
    push_stmt    vai para estado 41
    pop_stmt     vai para estado 42
    reti_stmt    vai para estado 43
    halt_stmt    vai para estado 44
    nop_stmt     vai para estado 45
    byte_stmt    vai para estado 46
    word_stmt    vai para estado 47
    alloc_stmt   vai para estado 48
    org_stmt     vai para estado 49
    equ_stmt     vai para estado 50
    label        vai para estado 51


Estado 1

   26 add_stmt: ADD • REG COMMA REG COMMA REG
   27         | ADD • REG COMMA REG COMMA CARDINAL NUMBER

    REG  troca e vai para estado 52


Estado 2

   28 sub_stmt: SUB • REG COMMA REG COMMA REG
   29         | SUB • REG COMMA REG COMMA CARDINAL NUMBER

    REG  troca e vai para estado 53


Estado 3

   30 or_stmt: OR • REG COMMA REG COMMA REG
   31        | OR • REG COMMA REG COMMA CARDINAL NUMBER

    REG  troca e vai para estado 54


Estado 4

   32 and_stmt: AND • REG COMMA REG COMMA REG
   33         | AND • REG COMMA REG COMMA CARDINAL NUMBER

    REG  troca e vai para estado 55


Estado 5

   34 not_stmt: NOT • REG COMMA REG
   35         | NOT • REG COMMA CARDINAL NUMBER

    REG  troca e vai para estado 56


Estado 6

   36 xor_stmt: XOR • REG COMMA REG
   37         | XOR • REG COMMA CARDINAL NUMBER

    REG  troca e vai para estado 57


Estado 7

   38 cmp_stmt: CMP • REG COMMA REG

    REG  troca e vai para estado 58


Estado 8

   39 branch_stmt: BRANCH • REG COMMA IDENTIFIER

    REG  troca e vai para estado 59


Estado 9

   42 jump_stmt: JUMP • REG COMMA CARDINAL NUMBER

    REG  troca e vai para estado 60


Estado 10

   43 jump_stmt: JUMP_LINK • REG COMMA REG COMMA CARDINAL NUMBER

    REG  troca e vai para estado 61


Estado 11

   40 move_stmt: MOVE • REG COMMA REG
   41          | MOVE • REG COMMA CARDINAL NUMBER

    REG  troca e vai para estado 62


Estado 12

   44 load_stmt: LOAD_DIRECT • REG COMMA CARDINAL NUMBER

    REG  troca e vai para estado 63


Estado 13

   45 load_stmt: LOAD_IMMEDIATE • REG COMMA CARDINAL NUMBER

    REG  troca e vai para estado 64


Estado 14

   46 load_stmt: LOAD_INDEXED • REG COMMA REG COMMA CARDINAL NUMBER

    REG  troca e vai para estado 65


Estado 15

   47 store_stmt: STORE_DIRECT • REG COMMA CARDINAL NUMBER

    REG  troca e vai para estado 66


Estado 16

   48 store_stmt: STORE_INDEXED • REG COMMA REG COMMA CARDINAL NUMBER

    REG  troca e vai para estado 67


Estado 17

   49 push_stmt: PUSH • REG

    REG  troca e vai para estado 68


Estado 18

   50 pop_stmt: POP • REG

    REG  troca e vai para estado 69


Estado 19

   51 reti_stmt: RETI •

    $default  redução com regra 51 (reti_stmt)


Estado 20

   52 halt_stmt: HALT •

    $default  redução com regra 52 (halt_stmt)


Estado 21

   53 nop_stmt: NOP •

    $default  redução com regra 53 (nop_stmt)


Estado 22

   58 equ_stmt: IDENTIFIER • EQU NUMBER
   59 label: IDENTIFIER • COLON

    COLON  troca e vai para estado 70
    EQU    troca e vai para estado 71


Estado 23

   54 byte_stmt: BYTE • NUMBER

    NUMBER  troca e vai para estado 72


Estado 24

   55 word_stmt: WORD • NUMBER

    NUMBER  troca e vai para estado 73


Estado 25

   56 alloc_stmt: ALLOC • IDENTIFIER NUMBER

    IDENTIFIER  troca e vai para estado 74


Estado 26

   57 org_stmt: ORG • NUMBER

    NUMBER  troca e vai para estado 75


Estado 27

    0 $accept: prog • $end
    1 prog: prog • stmt

    $end            troca e vai para estado 76
    ADD             troca e vai para estado 1
    SUB             troca e vai para estado 2
    OR              troca e vai para estado 3
    AND             troca e vai para estado 4
    NOT             troca e vai para estado 5
    XOR             troca e vai para estado 6
    CMP             troca e vai para estado 7
    BRANCH          troca e vai para estado 8
    JUMP            troca e vai para estado 9
    JUMP_LINK       troca e vai para estado 10
    MOVE            troca e vai para estado 11
    LOAD_DIRECT     troca e vai para estado 12
    LOAD_IMMEDIATE  troca e vai para estado 13
    LOAD_INDEXED    troca e vai para estado 14
    STORE_DIRECT    troca e vai para estado 15
    STORE_INDEXED   troca e vai para estado 16
    PUSH            troca e vai para estado 17
    POP             troca e vai para estado 18
    RETI            troca e vai para estado 19
    HALT            troca e vai para estado 20
    NOP             troca e vai para estado 21
    IDENTIFIER      troca e vai para estado 22
    BYTE            troca e vai para estado 23
    WORD            troca e vai para estado 24
    ALLOC           troca e vai para estado 25
    ORG             troca e vai para estado 26

    stmt         vai para estado 77
    add_stmt     vai para estado 29
    sub_stmt     vai para estado 30
    or_stmt      vai para estado 31
    and_stmt     vai para estado 32
    not_stmt     vai para estado 33
    xor_stmt     vai para estado 34
    cmp_stmt     vai para estado 35
    branch_stmt  vai para estado 36
    move_stmt    vai para estado 37
    jump_stmt    vai para estado 38
    load_stmt    vai para estado 39
    store_stmt   vai para estado 40
    push_stmt    vai para estado 41
    pop_stmt     vai para estado 42
    reti_stmt    vai para estado 43
    halt_stmt    vai para estado 44
    nop_stmt     vai para estado 45
    byte_stmt    vai para estado 46
    word_stmt    vai para estado 47
    alloc_stmt   vai para estado 48
    org_stmt     vai para estado 49
    equ_stmt     vai para estado 50
    label        vai para estado 51


Estado 28

    2 prog: stmt •

    $default  redução com regra 2 (prog)


Estado 29

    3 stmt: add_stmt •

    $default  redução com regra 3 (stmt)


Estado 30

    4 stmt: sub_stmt •

    $default  redução com regra 4 (stmt)


Estado 31

    5 stmt: or_stmt •

    $default  redução com regra 5 (stmt)


Estado 32

    6 stmt: and_stmt •

    $default  redução com regra 6 (stmt)


Estado 33

    7 stmt: not_stmt •

    $default  redução com regra 7 (stmt)


Estado 34

    8 stmt: xor_stmt •

    $default  redução com regra 8 (stmt)


Estado 35

    9 stmt: cmp_stmt •

    $default  redução com regra 9 (stmt)


Estado 36

   10 stmt: branch_stmt •

    $default  redução com regra 10 (stmt)


Estado 37

   11 stmt: move_stmt •

    $default  redução com regra 11 (stmt)


Estado 38

   12 stmt: jump_stmt •

    $default  redução com regra 12 (stmt)


Estado 39

   13 stmt: load_stmt •

    $default  redução com regra 13 (stmt)


Estado 40

   14 stmt: store_stmt •

    $default  redução com regra 14 (stmt)


Estado 41

   15 stmt: push_stmt •

    $default  redução com regra 15 (stmt)


Estado 42

   16 stmt: pop_stmt •

    $default  redução com regra 16 (stmt)


Estado 43

   17 stmt: reti_stmt •

    $default  redução com regra 17 (stmt)


Estado 44

   18 stmt: halt_stmt •

    $default  redução com regra 18 (stmt)


Estado 45

   19 stmt: nop_stmt •

    $default  redução com regra 19 (stmt)


Estado 46

   20 stmt: byte_stmt •

    $default  redução com regra 20 (stmt)


Estado 47

   21 stmt: word_stmt •

    $default  redução com regra 21 (stmt)


Estado 48

   22 stmt: alloc_stmt •

    $default  redução com regra 22 (stmt)


Estado 49

   23 stmt: org_stmt •

    $default  redução com regra 23 (stmt)


Estado 50

   24 stmt: equ_stmt •

    $default  redução com regra 24 (stmt)


Estado 51

   25 stmt: label •

    $default  redução com regra 25 (stmt)


Estado 52

   26 add_stmt: ADD REG • COMMA REG COMMA REG
   27         | ADD REG • COMMA REG COMMA CARDINAL NUMBER

    COMMA  troca e vai para estado 78


Estado 53

   28 sub_stmt: SUB REG • COMMA REG COMMA REG
   29         | SUB REG • COMMA REG COMMA CARDINAL NUMBER

    COMMA  troca e vai para estado 79


Estado 54

   30 or_stmt: OR REG • COMMA REG COMMA REG
   31        | OR REG • COMMA REG COMMA CARDINAL NUMBER

    COMMA  troca e vai para estado 80


Estado 55

   32 and_stmt: AND REG • COMMA REG COMMA REG
   33         | AND REG • COMMA REG COMMA CARDINAL NUMBER

    COMMA  troca e vai para estado 81


Estado 56

   34 not_stmt: NOT REG • COMMA REG
   35         | NOT REG • COMMA CARDINAL NUMBER

    COMMA  troca e vai para estado 82


Estado 57

   36 xor_stmt: XOR REG • COMMA REG
   37         | XOR REG • COMMA CARDINAL NUMBER

    COMMA  troca e vai para estado 83


Estado 58

   38 cmp_stmt: CMP REG • COMMA REG

    COMMA  troca e vai para estado 84


Estado 59

   39 branch_stmt: BRANCH REG • COMMA IDENTIFIER

    COMMA  troca e vai para estado 85


Estado 60

   42 jump_stmt: JUMP REG • COMMA CARDINAL NUMBER

    COMMA  troca e vai para estado 86


Estado 61

   43 jump_stmt: JUMP_LINK REG • COMMA REG COMMA CARDINAL NUMBER

    COMMA  troca e vai para estado 87


Estado 62

   40 move_stmt: MOVE REG • COMMA REG
   41          | MOVE REG • COMMA CARDINAL NUMBER

    COMMA  troca e vai para estado 88


Estado 63

   44 load_stmt: LOAD_DIRECT REG • COMMA CARDINAL NUMBER

    COMMA  troca e vai para estado 89


Estado 64

   45 load_stmt: LOAD_IMMEDIATE REG • COMMA CARDINAL NUMBER

    COMMA  troca e vai para estado 90


Estado 65

   46 load_stmt: LOAD_INDEXED REG • COMMA REG COMMA CARDINAL NUMBER

    COMMA  troca e vai para estado 91


Estado 66

   47 store_stmt: STORE_DIRECT REG • COMMA CARDINAL NUMBER

    COMMA  troca e vai para estado 92


Estado 67

   48 store_stmt: STORE_INDEXED REG • COMMA REG COMMA CARDINAL NUMBER

    COMMA  troca e vai para estado 93


Estado 68

   49 push_stmt: PUSH REG •

    $default  redução com regra 49 (push_stmt)


Estado 69

   50 pop_stmt: POP REG •

    $default  redução com regra 50 (pop_stmt)


Estado 70

   59 label: IDENTIFIER COLON •

    $default  redução com regra 59 (label)


Estado 71

   58 equ_stmt: IDENTIFIER EQU • NUMBER

    NUMBER  troca e vai para estado 94


Estado 72

   54 byte_stmt: BYTE NUMBER •

    $default  redução com regra 54 (byte_stmt)


Estado 73

   55 word_stmt: WORD NUMBER •

    $default  redução com regra 55 (word_stmt)


Estado 74

   56 alloc_stmt: ALLOC IDENTIFIER • NUMBER

    NUMBER  troca e vai para estado 95


Estado 75

   57 org_stmt: ORG NUMBER •

    $default  redução com regra 57 (org_stmt)


Estado 76

    0 $accept: prog $end •

    $default  aceitar


Estado 77

    1 prog: prog stmt •

    $default  redução com regra 1 (prog)


Estado 78

   26 add_stmt: ADD REG COMMA • REG COMMA REG
   27         | ADD REG COMMA • REG COMMA CARDINAL NUMBER

    REG  troca e vai para estado 96


Estado 79

   28 sub_stmt: SUB REG COMMA • REG COMMA REG
   29         | SUB REG COMMA • REG COMMA CARDINAL NUMBER

    REG  troca e vai para estado 97


Estado 80

   30 or_stmt: OR REG COMMA • REG COMMA REG
   31        | OR REG COMMA • REG COMMA CARDINAL NUMBER

    REG  troca e vai para estado 98


Estado 81

   32 and_stmt: AND REG COMMA • REG COMMA REG
   33         | AND REG COMMA • REG COMMA CARDINAL NUMBER

    REG  troca e vai para estado 99


Estado 82

   34 not_stmt: NOT REG COMMA • REG
   35         | NOT REG COMMA • CARDINAL NUMBER

    REG       troca e vai para estado 100
    CARDINAL  troca e vai para estado 101


Estado 83

   36 xor_stmt: XOR REG COMMA • REG
   37         | XOR REG COMMA • CARDINAL NUMBER

    REG       troca e vai para estado 102
    CARDINAL  troca e vai para estado 103


Estado 84

   38 cmp_stmt: CMP REG COMMA • REG

    REG  troca e vai para estado 104


Estado 85

   39 branch_stmt: BRANCH REG COMMA • IDENTIFIER

    IDENTIFIER  troca e vai para estado 105


Estado 86

   42 jump_stmt: JUMP REG COMMA • CARDINAL NUMBER

    CARDINAL  troca e vai para estado 106


Estado 87

   43 jump_stmt: JUMP_LINK REG COMMA • REG COMMA CARDINAL NUMBER

    REG  troca e vai para estado 107


Estado 88

   40 move_stmt: MOVE REG COMMA • REG
   41          | MOVE REG COMMA • CARDINAL NUMBER

    REG       troca e vai para estado 108
    CARDINAL  troca e vai para estado 109


Estado 89

   44 load_stmt: LOAD_DIRECT REG COMMA • CARDINAL NUMBER

    CARDINAL  troca e vai para estado 110


Estado 90

   45 load_stmt: LOAD_IMMEDIATE REG COMMA • CARDINAL NUMBER

    CARDINAL  troca e vai para estado 111


Estado 91

   46 load_stmt: LOAD_INDEXED REG COMMA • REG COMMA CARDINAL NUMBER

    REG  troca e vai para estado 112


Estado 92

   47 store_stmt: STORE_DIRECT REG COMMA • CARDINAL NUMBER

    CARDINAL  troca e vai para estado 113


Estado 93

   48 store_stmt: STORE_INDEXED REG COMMA • REG COMMA CARDINAL NUMBER

    REG  troca e vai para estado 114


Estado 94

   58 equ_stmt: IDENTIFIER EQU NUMBER •

    $default  redução com regra 58 (equ_stmt)


Estado 95

   56 alloc_stmt: ALLOC IDENTIFIER NUMBER •

    $default  redução com regra 56 (alloc_stmt)


Estado 96

   26 add_stmt: ADD REG COMMA REG • COMMA REG
   27         | ADD REG COMMA REG • COMMA CARDINAL NUMBER

    COMMA  troca e vai para estado 115


Estado 97

   28 sub_stmt: SUB REG COMMA REG • COMMA REG
   29         | SUB REG COMMA REG • COMMA CARDINAL NUMBER

    COMMA  troca e vai para estado 116


Estado 98

   30 or_stmt: OR REG COMMA REG • COMMA REG
   31        | OR REG COMMA REG • COMMA CARDINAL NUMBER

    COMMA  troca e vai para estado 117


Estado 99

   32 and_stmt: AND REG COMMA REG • COMMA REG
   33         | AND REG COMMA REG • COMMA CARDINAL NUMBER

    COMMA  troca e vai para estado 118


Estado 100

   34 not_stmt: NOT REG COMMA REG •

    $default  redução com regra 34 (not_stmt)


Estado 101

   35 not_stmt: NOT REG COMMA CARDINAL • NUMBER

    NUMBER  troca e vai para estado 119


Estado 102

   36 xor_stmt: XOR REG COMMA REG •

    $default  redução com regra 36 (xor_stmt)


Estado 103

   37 xor_stmt: XOR REG COMMA CARDINAL • NUMBER

    NUMBER  troca e vai para estado 120


Estado 104

   38 cmp_stmt: CMP REG COMMA REG •

    $default  redução com regra 38 (cmp_stmt)


Estado 105

   39 branch_stmt: BRANCH REG COMMA IDENTIFIER •

    $default  redução com regra 39 (branch_stmt)


Estado 106

   42 jump_stmt: JUMP REG COMMA CARDINAL • NUMBER

    NUMBER  troca e vai para estado 121


Estado 107

   43 jump_stmt: JUMP_LINK REG COMMA REG • COMMA CARDINAL NUMBER

    COMMA  troca e vai para estado 122


Estado 108

   40 move_stmt: MOVE REG COMMA REG •

    $default  redução com regra 40 (move_stmt)


Estado 109

   41 move_stmt: MOVE REG COMMA CARDINAL • NUMBER

    NUMBER  troca e vai para estado 123


Estado 110

   44 load_stmt: LOAD_DIRECT REG COMMA CARDINAL • NUMBER

    NUMBER  troca e vai para estado 124


Estado 111

   45 load_stmt: LOAD_IMMEDIATE REG COMMA CARDINAL • NUMBER

    NUMBER  troca e vai para estado 125


Estado 112

   46 load_stmt: LOAD_INDEXED REG COMMA REG • COMMA CARDINAL NUMBER

    COMMA  troca e vai para estado 126


Estado 113

   47 store_stmt: STORE_DIRECT REG COMMA CARDINAL • NUMBER

    NUMBER  troca e vai para estado 127


Estado 114

   48 store_stmt: STORE_INDEXED REG COMMA REG • COMMA CARDINAL NUMBER

    COMMA  troca e vai para estado 128


Estado 115

   26 add_stmt: ADD REG COMMA REG COMMA • REG
   27         | ADD REG COMMA REG COMMA • CARDINAL NUMBER

    REG       troca e vai para estado 129
    CARDINAL  troca e vai para estado 130


Estado 116

   28 sub_stmt: SUB REG COMMA REG COMMA • REG
   29         | SUB REG COMMA REG COMMA • CARDINAL NUMBER

    REG       troca e vai para estado 131
    CARDINAL  troca e vai para estado 132


Estado 117

   30 or_stmt: OR REG COMMA REG COMMA • REG
   31        | OR REG COMMA REG COMMA • CARDINAL NUMBER

    REG       troca e vai para estado 133
    CARDINAL  troca e vai para estado 134


Estado 118

   32 and_stmt: AND REG COMMA REG COMMA • REG
   33         | AND REG COMMA REG COMMA • CARDINAL NUMBER

    REG       troca e vai para estado 135
    CARDINAL  troca e vai para estado 136


Estado 119

   35 not_stmt: NOT REG COMMA CARDINAL NUMBER •

    $default  redução com regra 35 (not_stmt)


Estado 120

   37 xor_stmt: XOR REG COMMA CARDINAL NUMBER •

    $default  redução com regra 37 (xor_stmt)


Estado 121

   42 jump_stmt: JUMP REG COMMA CARDINAL NUMBER •

    $default  redução com regra 42 (jump_stmt)


Estado 122

   43 jump_stmt: JUMP_LINK REG COMMA REG COMMA • CARDINAL NUMBER

    CARDINAL  troca e vai para estado 137


Estado 123

   41 move_stmt: MOVE REG COMMA CARDINAL NUMBER •

    $default  redução com regra 41 (move_stmt)


Estado 124

   44 load_stmt: LOAD_DIRECT REG COMMA CARDINAL NUMBER •

    $default  redução com regra 44 (load_stmt)


Estado 125

   45 load_stmt: LOAD_IMMEDIATE REG COMMA CARDINAL NUMBER •

    $default  redução com regra 45 (load_stmt)


Estado 126

   46 load_stmt: LOAD_INDEXED REG COMMA REG COMMA • CARDINAL NUMBER

    CARDINAL  troca e vai para estado 138


Estado 127

   47 store_stmt: STORE_DIRECT REG COMMA CARDINAL NUMBER •

    $default  redução com regra 47 (store_stmt)


Estado 128

   48 store_stmt: STORE_INDEXED REG COMMA REG COMMA • CARDINAL NUMBER

    CARDINAL  troca e vai para estado 139


Estado 129

   26 add_stmt: ADD REG COMMA REG COMMA REG •

    $default  redução com regra 26 (add_stmt)


Estado 130

   27 add_stmt: ADD REG COMMA REG COMMA CARDINAL • NUMBER

    NUMBER  troca e vai para estado 140


Estado 131

   28 sub_stmt: SUB REG COMMA REG COMMA REG •

    $default  redução com regra 28 (sub_stmt)


Estado 132

   29 sub_stmt: SUB REG COMMA REG COMMA CARDINAL • NUMBER

    NUMBER  troca e vai para estado 141


Estado 133

   30 or_stmt: OR REG COMMA REG COMMA REG •

    $default  redução com regra 30 (or_stmt)


Estado 134

   31 or_stmt: OR REG COMMA REG COMMA CARDINAL • NUMBER

    NUMBER  troca e vai para estado 142


Estado 135

   32 and_stmt: AND REG COMMA REG COMMA REG •

    $default  redução com regra 32 (and_stmt)


Estado 136

   33 and_stmt: AND REG COMMA REG COMMA CARDINAL • NUMBER

    NUMBER  troca e vai para estado 143


Estado 137

   43 jump_stmt: JUMP_LINK REG COMMA REG COMMA CARDINAL • NUMBER

    NUMBER  troca e vai para estado 144


Estado 138

   46 load_stmt: LOAD_INDEXED REG COMMA REG COMMA CARDINAL • NUMBER

    NUMBER  troca e vai para estado 145


Estado 139

   48 store_stmt: STORE_INDEXED REG COMMA REG COMMA CARDINAL • NUMBER

    NUMBER  troca e vai para estado 146


Estado 140

   27 add_stmt: ADD REG COMMA REG COMMA CARDINAL NUMBER •

    $default  redução com regra 27 (add_stmt)


Estado 141

   29 sub_stmt: SUB REG COMMA REG COMMA CARDINAL NUMBER •

    $default  redução com regra 29 (sub_stmt)


Estado 142

   31 or_stmt: OR REG COMMA REG COMMA CARDINAL NUMBER •

    $default  redução com regra 31 (or_stmt)


Estado 143

   33 and_stmt: AND REG COMMA REG COMMA CARDINAL NUMBER •

    $default  redução com regra 33 (and_stmt)


Estado 144

   43 jump_stmt: JUMP_LINK REG COMMA REG COMMA CARDINAL NUMBER •

    $default  redução com regra 43 (jump_stmt)


Estado 145

   46 load_stmt: LOAD_INDEXED REG COMMA REG COMMA CARDINAL NUMBER •

    $default  redução com regra 46 (load_stmt)


Estado 146

   48 store_stmt: STORE_INDEXED REG COMMA REG COMMA CARDINAL NUMBER •

    $default  redução com regra 48 (store_stmt)
